--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"dependencies": {
 		"express": "~4.12.0",
 		"serve-favicon": "~2.2.0",
-		"mongodb": "*",
+		"mongodb": "~1.4",
 		"monk": "*",
       "mongoskin": "*",
 		"body-parser": "*",
