--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
 	"name": "experiment",
 	"version": "0.0.0",
 	"private": true,
+	"main": "app.js",
 	"scripts": {
 		"start": "node ./app"
 	},
 	"dependencies": {
 		"express": "*",
+		"ejs": "*",
 		"serve-favicon": "~2.4.5",
 		"body-parser": "*"
 	}
